fixing new logo centering on mobile portrait

--- a/cabinet_app/app/assets/stylesheets/04main.css
+++ b/cabinet_app/app/assets/stylesheets/04main.css
@@ -885,6 +885,8 @@ hr {
   }
   h1, h1 a {
     text-align: center;
+    margin-left: 7%;
+    margin-right: 5%;
   }
   h1 a {
     padding-bottom: 5px;
